[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=0.8",
  "wheel"
]


[project]
name='naks_library'
version="0.2.0"
description='package for naks projects'
authors = [
  { name="Gumuev Nazhmutdin", email="gumuevnazhmutdin123@gmail.com" },
]
requires-python = ">=3.12"
dependencies = [
  "pydantic",
  "dateutils",
  "SQLAlchemy",
  "setuptools",
  "Faker"
]


[project.urls]
Homepage = "https://github.com/Nazhmutdin/naks_library"
