[project]
name='naks_library'
version="0.2.5"
description='package for naks projects'
authors = [
  { name="Gumuev Nazhmutdin", email="gumuevnazhmutdin123@gmail.com" },
]
requires-python = ">=3.12"
dependencies = [
  "pydantic",
  "dateutils",
  "SQLAlchemy",
  "setuptools"
]


[project.urls]
Homepage = "https://github.com/Nazhmutdin/naks_library"


[tool.poetry]
name = "naks-library"
version = "0.1.0"
description = ""
authors = ["Nazhmutdin <gumuevnazhmutdin1248@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.36"
dateutils = "^0.6.12"
pydantic = "^2.10.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-dotenv = "^0.5.2"
pytest-asyncio = "^0.25.0"
asyncpg = "^0.30.0"
faker = "^33.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
