[tool.poetry]
name = "rencons-library"
version = "0.3.1"
description = ""
authors = ["Nazhmutdin <gumuevnazhmutdin1248@gmail.com>"]
packages = [{include = "rencons_library"}]


[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.36"
dateutils = "^0.6.12"
pydantic = "^2.10.3"
python-jose = "^3.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-dotenv = "^0.5.2"
asyncpg = "^0.30.0"
faker = "^33.1.0"
anyio = "^4.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
